--- a/public/style.css
+++ b/public/style.css
@@ -87,14 +87,16 @@ label[for="useExactPrompt"] {
   display: inline;
 }
 
-.footnote {
-  text-align: center;
-  margin-top: 100px;
+.extraLinks {
+  position: absolute;
+  width: 100px;
+  top: 80px;
+  left: 10px;
 }
 
-.footnote a,
-.footnote a:visited {
-  color: #555;
+.extraLinks a,
+.extraLinks a:visited {
+  color: #888;
 } 
 
 .copyToClipboard {
