Add Rotate button for images

--- a/public/style.css
+++ b/public/style.css
@@ -86,7 +86,7 @@ h1 {
   background-color: #fff;
 }
 
-.delete-btn {
+.imageButton {
   margin-left: 10px;
   border: 1px solid #aaa;
   border-bottom: 1px solid #000;
