--- a/public/style.css
+++ b/public/style.css
@@ -114,6 +114,11 @@ label[for="useExactPrompt"] {
   user-select: none;
 }
 
+.extraLink {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
 .extraLinks a,
 .extraLinks a:visited,
 .extraLinks .pseudoLink {
@@ -227,4 +232,39 @@ a.additionalButtonsLink {
 
 #inspirerLink {
   font-weight: bold;
+}
+
+@media (max-width: 600px) {
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  h1 {
+    display: none;
+  }
+
+  .extraLinks {
+    position: absolute;
+    top: 5px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    font-size: 0.8em;
+  }
+  
+  .extraLink {
+    margin: 0 10px;
+  }
+
+  .wrapper {
+    margin-top: 30px;
+    max-width: none;
+    width: 90%;
+  }
+
+  .images img.generatedImage {
+    max-height: 520px;
+  }
 }
